--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "esrun": "src/bin.js"
   },
   "scripts": {
-    "test": "./src/bin.js test/test.ts"
+    "test": "./src/bin.js test/test.ts",
+    "publish": "npm publish --access public"
   },
   "repository": {
     "type": "git",
