--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "files": ["src/**/*"],
   "main": "src/main.js",
   "bin": {
-    "esrun": "src/bin.js",
-    "esr": "src/bin.js"
+    "esrun": "src/bin.js"
   },
   "scripts": {
     "test": "./src/bin.js test"
