--- a/package.json
+++ b/package.json
@@ -1,35 +1,43 @@
 {
-  "name": "@digitak/esrun",
-  "version": "1.0.8",
-  "description": "Execute directly your Typescript/Javascript(with ES modules) files using Esbuild",
-  "files": ["src/**/*"],
-  "main": "src/main.js",
-  "bin": {
-    "esrun": "src/bin.js"
-  },
-  "scripts": {
-    "test": "./src/bin.js test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/digital-loukoum/esrun.git"
-  },
-  "keywords": [
-    "esbuild",
-    "run",
-    "execute",
-    "typescript"
-  ],
-  "author": "Lepzulnag",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/digital-loukoum/esrun/issues"
-  },
-  "homepage": "https://github.com/digital-loukoum/esrun#readme",
-  "dependencies": {
-    "esbuild": "^0.8.31"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.20"
-  }
+	"name": "@digitak/esrun",
+	"version": "1.1.0",
+	"type": "module",
+	"description": "Execute directly your Typescript/Javascript(with ES modules) files using Esbuild",
+	"files": [
+		"src/**/*"
+	],
+	"main": "src/main.js",
+	"bin": {
+		"esrun": "src/bin.js"
+	},
+	"scripts": {
+		"test": "./src/bin.js test coco"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/digital-loukoum/esrun.git"
+	},
+	"keywords": [
+		"esbuild",
+		"run",
+		"execute",
+		"typescript"
+	],
+	"author": "Lepzulnag",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/digital-loukoum/esrun/issues"
+	},
+	"homepage": "https://github.com/digital-loukoum/esrun#readme",
+	"dependencies": {
+		"esbuild": "^0.8.31"
+	},
+	"devDependencies": {
+		"@digitak/bunker": "^3.0.5",
+		"@types/node": "^14.14.20",
+		"cute-print": "^1.0.4",
+		"fartest": "^2.1.6",
+		"fsevents": "^2.3.2",
+		"typescript": "^4.2.4"
+	}
 }
