--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@digitak/esrun",
-	"version": "1.1.1",
+	"version": "1.1.2",
 	"type": "module",
 	"description": "Execute directly your Typescript/Javascript(with ES modules) files using Esbuild",
 	"files": [
@@ -12,6 +12,9 @@
 	},
 	"scripts": {
 		"test": "./src/bin.js test coco"
+	},
+	"engines": {
+		"node": ">=14.0"
 	},
 	"repository": {
 		"type": "git",
