--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@digitak/esrun",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"type": "module",
 	"description": "Execute directly your Typescript/Javascript(with ES modules) files using Esbuild",
 	"files": [
@@ -33,6 +33,7 @@
 	},
 	"homepage": "https://github.com/digital-loukoum/esrun#readme",
 	"dependencies": {
+		"@digitak/grubber": "^1.0.2",
 		"esbuild": "^0.8.31"
 	},
 	"devDependencies": {
