--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"esrun": "src/bin.js"
 	},
 	"scripts": {
-		"test": "./src/bin.js test coco"
+		"test": "./src/bin.js test --watch coco"
 	},
 	"engines": {
 		"node": ">=14.0"
@@ -34,7 +34,8 @@
 	"homepage": "https://github.com/digital-loukoum/esrun#readme",
 	"dependencies": {
 		"@digitak/grubber": "^1.0.2",
-		"esbuild": "^0.8.31"
+		"chokidar": "^3.5.1",
+		"esbuild": "^0.12.4"
 	},
 	"devDependencies": {
 		"@digitak/bunker": "^3.0.5",
