--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "@digitak/esrun",
-	"version": "1.1.3",
+	"version": "1.2.1",
 	"type": "module",
-	"description": "Execute directly your Typescript/Javascript(with ES modules) files using Esbuild",
+	"description": "Execute directly your Typescript files using Esbuild",
 	"files": [
 		"src/**/*"
 	],
@@ -11,7 +11,7 @@
 		"esrun": "src/bin.js"
 	},
 	"scripts": {
-		"test": "./src/bin.js test --watch coco"
+		"test": "./src/bin.js --watch test --watch coco"
 	},
 	"engines": {
 		"node": ">=14.0"
