--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"scripts": {
 		"check": "tsc --noEmit",
 		"build": "node scripts/build.js",
+		"test": "./library/bin.js test --watch coco",
 		"test:run": "./library/bin.js test --watch coco",
 		"test:watch": "./library/bin.js --watch test --watch coco",
 		"test:inspect": "./library/bin.js --inspect test --watch coco"
