--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@digitak/esrun",
-	"version": "1.2.4",
+	"version": "1.2.5",
 	"type": "module",
 	"description": "Execute directly your Typescript files using Esbuild",
 	"files": [
@@ -15,7 +15,7 @@
 		"build": "node scripts/build.js",
 		"test": "./library/bin.js test --watch coco",
 		"test:run": "./library/bin.js test --watch coco",
-		"test:watch": "./library/bin.js --watch test --watch coco",
+		"test:watch": "./library/bin.js --watch:test/*.json test --watch coco",
 		"test:inspect": "./library/bin.js --inspect test --watch coco",
 		"test:watch:inspect": "./library/bin.js --watch --inspect test --watch coco"
 	},
