--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@digitak/esrun",
-	"version": "1.2.5",
+	"version": "1.2.6",
 	"type": "module",
 	"description": "Execute directly your Typescript files using Esbuild",
 	"files": [
@@ -40,6 +40,7 @@
 	"homepage": "https://github.com/digital-loukoum/esrun#readme",
 	"dependencies": {
 		"@digitak/grubber": "^1.0.2",
+		"anymatch": "^3.1.2",
 		"chokidar": "^3.5.1",
 		"esbuild": "^0.12.4"
 	},
