--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@digitak/esrun",
-	"version": "2.0.2",
+	"version": "2.0.3",
 	"type": "module",
 	"description": "Execute directly your Typescript files using Esbuild",
 	"files": [
@@ -42,6 +42,7 @@
 	"homepage": "https://github.com/digital-loukoum/esrun#readme",
 	"dependencies": {
 		"@digitak/grubber": "^2.0.4",
+		"@digitak/tsc-esm": "^2.0.3",
 		"@types/chokidar": "^2.1.3",
 		"anymatch": "^3.1.2",
 		"chokidar": "^3.5.1",
