--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"lint": "tsc --noEmit",
 		"build": "node scripts/build.js",
 		"deploy": "node scripts/deploy.js",
+		"dev": "./package/bin.js --watch test --watch coco",
 		"test": "./package/bin.js test --watch coco",
-		"test:run": "./package/bin.js test --watch coco",
 		"test:watch": "./package/bin.js --watch:test/*.json test --watch coco",
 		"test:watch:preserve": "./package/bin.js --preserveConsole --watch:test/*.json test --watch coco",
 		"test:inspect": "./package/bin.js --inspect test --watch coco",
