📝 Improve documentation for cli parameters

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"deploy": "node scripts/deploy.js",
 		"dev": "./package/bin.js --watch test --watch coco",
 		"test": "./package/bin.js test --watch coco",
+		"test:tsconfig": "./package/bin.js --tsconfig test/tsconfig.json test --watch coco",
 		"test:node-cli": "./package/bin.js --node-max-old-space-size=4096 test --watch coco",
+		"test:readline": "./package/bin.js test/readline",
 		"test:watch": "./package/bin.js --watch=test/*.json test --watch coco",
 		"test:watch:preserve": "./package/bin.js --preserveConsole --watch=test/*.json test --watch coco",
 		"test:inspect": "./package/bin.js --inspect test --watch coco",
