--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
 	},
 	"homepage": "https://github.com/digital-loukoum/esrun#readme",
 	"dependencies": {
-		"@digitak/grubber": "^3.1.1",
+		"@digitak/grubber": "^3.1.3",
 		"chokidar": "^3.5.1",
+		"cuid": "^2.1.8",
 		"esbuild": "^0.14.47"
 	},
 	"devDependencies": {
