--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
 	},
 	"homepage": "https://github.com/digital-loukoum/esrun#readme",
 	"dependencies": {
-		"@digitak/grubber": "^3.1.3",
+		"@digitak/grubber": "^3.1.4",
 		"chokidar": "^3.5.1",
-		"esbuild": "^0.14.47",
-		"cuid": "^2.1.8"
+		"cuid": "^2.1.8",
+		"esbuild": "^0.14.47"
 	},
 	"devDependencies": {
 		"@digitak/bunker": "^3.2.1",
