--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@digitak/esrun",
-	"version": "3.2.27",
+	"name": "esrun",
+	"version": "3.2.26",
 	"type": "module",
 	"description": "Execute directly your Typescript files using Esbuild",
 	"main": "./index.js",
